frontend/tests/cases/positive/graded/meet-simple.gr
--- gr -no-eval
id : forall {a : Type} . a [1 /\ 1] -> a
id [x] = x