frontend/tests/cases/negative/graded/lambdaApprox.gr
lambdaApprox : Int [0..0] -> Int
lambdaApprox = \[x] -> x